crates/ruff_python_parser/tests/snapshots/invalid_syntax@if_stmt_invalid_test_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/if_stmt_invalid_test_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..48,
        body: Suite {
            range: 0..48,
            node_index: NodeIndex(None),
            statements: [
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 0..10,
                        test: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 3..5,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 4..5,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                        body: Suite {
                            range: 7..10,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 7..10,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 7..10,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        elif_else_clauses: [],
                    },
                ),
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 11..26,
                        test: Yield(
                            ExprYield {
                                node_index: NodeIndex(None),
                                range: 14..21,
                                value: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 20..21,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        body: Suite {
                            range: 23..26,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 23..26,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 23..26,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        elif_else_clauses: [],
                    },
                ),
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 27..47,
                        test: YieldFrom(
                            ExprYieldFrom {
                                node_index: NodeIndex(None),
                                range: 30..42,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 41..42,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        body: Suite {
                            range: 44..47,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 44..47,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 44..47,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        elif_else_clauses: [],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | if *x: ...
  |    ^^ Syntax Error: Starred expression cannot be used here
2 | if yield x: ...
3 | if yield from x: ...
  |


  |
1 | if *x: ...
2 | if yield x: ...
  |    ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | if yield from x: ...
  |


  |
1 | if *x: ...
2 | if yield x: ...
3 | if yield from x: ...
  |    ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
